# receden-history

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
config/: eras.yaml
config/layouts/: c_comment.yaml  s_ika.yaml  t_tokutei_kizai.yaml  y_iyakuhin.yaml
data/raw/h24/: c20120514.csv  t_ALL20131227.csv
data/raw/h26/: c20160115.csv  t_ALL20151228.csv
data/raw/h28/: t_ALL20171130.csv
data/raw/r06/: c_ALL20250715.csv  t_ALL20260227.csv
data/raw/r08/: c_ALL20260626.csv  t_ALL20260529.csv
docs/: DATA_SOURCES.md  FILE_LAYOUTS.md  REQUIREMENTS.md  SITE_SPEC.md
src/receden_history/: __init__.py  cli.py  config.py  diff.py  ingest.py  layouts.py  report.py  site.py  validate.py
tests/: conftest.py  test_diff.py  test_ingest.py  test_layouts.py  test_report.py  test_site.py  test_validate.py
web/: index.html
web/assets/: app.js  style.css
